Fix rounded search bar on iOS (#473)

--- a/packages/reference/client/scss/65_scopes/algolia_instantsearch/_ais-SearchBox.scss
+++ b/packages/reference/client/scss/65_scopes/algolia_instantsearch/_ais-SearchBox.scss
@@ -22,6 +22,9 @@
     font-size: 1em;
     font-weight: 500;
     padding: 0 $global-spacing-unit-small;
+    // Remove rounded edges on iOS
+    -webkit-appearance: none;
+    margin-right: -5px;
 
     &:focus {
       outline: none;
